--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
     "version": 2,
     "builds": [{ "src": "src/index.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "src/index.js" }],
-    "headers": {
-        "Access-Control-Allow-Origin": "https://fe-deploy-olive.vercel.app",
-        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+    "routes": [{ "src": "/(.*)", "dest": "src/index.js" }]
 }
